Prevent scroll + align usename

--- a/javascript/styles/Login.styl
+++ b/javascript/styles/Login.styl
@@ -1,7 +1,7 @@
 .login {
   position: relative;
 
-  top: 25px;
+  top: 24px;
   width: 400px;
   height: 360px;
   padding-top: 20px;
