--- a/javascript/styles/ProfileInfo.styl
+++ b/javascript/styles/ProfileInfo.styl
@@ -26,7 +26,7 @@ $width = 400px;
   width: 290px;
   height: 90px;
 
-  line-height: 85px;
+  line-height: 86px;
 }
 
 .profile-info__data__content {
